# web

db_apps/: Makefile  README
db_apps/Earwig_nbneng_ndd0300_FaultMgmt/Earwig_src/db_apps_vrx/fault_mgmt/tests/: CMakeLists.txt  RdbHandler.cpp  RdbHandler.h  test_current_alarm.cpp  test_fault_mgmt.cpp  test_fm_event.cpp  test_fm_shared.cpp  test_fm_supported_alarm.cpp
db_apps/Internationalization/: BuildFiles.c  CheckSemiColonCount.py  Makefile  PatchStrings.py  b28n.js  b28n.min.js  gen-all-langs.sh  merge_spec_csv.awk  strings.csv
db_apps/alarmd/: Makefile
db_apps/appweb/: Makefile  appweb.configure.patch
db_apps/ast_rdb_modules/: Makefile  chan_qmirdb.c  dbhash.c  fnhash.c  fnhash.h  indexed_rdb.c  indexed_rdb.h  list.h  qmirdbctrl.c  qmirdbctrl.h  rwpipe.c  rwpipe.h  strarg.c  strarg.h
db_apps/atportmgr/: Makefile  atcmdqueue.c  atcmdqueue.h  atportmgr.c  atportmgr.h  atportmgr.sln  atportmgr.vcproj  cmdchanger.c  cmdchanger.h  funccaller.c  funccaller.h  list.h  lowserial.c  lowserial.h  moduledatabase.c  moduledatabase.h  tickcount.c  tickcount.h  utils.c  utils.h
db_apps/auth_client/: Makefile  main.c
db_apps/battery_manager/: Makefile  battery_rdb.c  battery_rdb.h  bq25601.c  bq2560x_reg.h  charger.h  fan54005.c  fan5401x.h  i2c_charger_common.h  i2c_linux.c  i2c_linux.h  i2c_monitor_common.h  main.c  max17050.h  max172xx.h  max17xxx.c  monitor.h
db_apps/battmonitor/: Makefile  battery.h  battery_imx28.c  battmonitor.c  power_nl_event.c  power_nl_event.h
db_apps/bt_sensord/: Makefile  README  bt_pair.sh  bt_sensord.h  bt_sensord.sh  healthpoint.c  main.c  mgh.c  mgh.h  non3230.c  non3230_priv.h  serial_support.c  td2551.c  td2551.h  td2551_priv.h
db_apps/btmgr/: Makefile  bluez_support.c  bluez_support.h  btmgr.c  btmgr_priv.h  btmgr_rpc.c  launch_btmgr.sh
db_apps/btsensormon_demo/: Makefile  btsensormon.c  (+8 more)
db_apps/gobbledegook/package/: configure.ac
db_apps/gobbledegook/package/include/: Gobbledegook.h
db_apps/gobbledegook/package/src/: Base64.cpp  Base64.h  CasaData.cpp  CasaData.h  CasaDbus.cpp  CasaDbus.h  CasaServicePlugin.h  CasaServicePluginHandler.h  Command.h  GattCharacteristic.cpp  GattCharacteristic.h  Globals.h  Gobbledegook.cpp  HciAdapter.cpp  HciAdapter.h  HexMask.cpp  HexMask.h  Housekeeping.cpp  Housekeeping.h  Logger.h  Makefile.am  Mgmt.cpp  Mgmt.h  Server.cpp  Server.h  Utils.cpp  standalone.cpp  test_data.json  uuids.h
db_apps/gobbledegook/package/src/plugins/: Makefile.am
db_apps/gobbledegook/package/src/plugins/mars/: Makefile.am  currentConnectionService.cpp  customDesignedService.cpp  device.cpp  deviceInformationService.cpp  ledService.cpp  pluginCommon.h  rssiService.cpp  speedTestService.cpp  visibleCellService.cpp
db_apps/gobbledegook/package/src/plugins/mrswivel/: Makefile.am  swivellingScan.cpp
db_apps/gobbledegook/package/src/plugins/saturn/: Makefile.am  Ping.cpp  currentConnectionService.cpp  customDesignedService.cpp  device.cpp  deviceInformationService.cpp  ledService.cpp  rssiService.cpp  speedTestService.cpp  systemService.cpp  visibleCellService.cpp
db_apps/gobbledegook/package/src/plugins/test/: Makefile.am  currentConnectionService.cpp  device.cpp  deviceInformationService.cpp  ledService.cpp  rssiService.cpp  speedTestService.cpp  visibleCellService.cpp
db_apps/netc_ws_plugins/: CMakeLists.txt  Makefile  ds_store.c  ds_store.h  netc_netstat.c  netstat.c  netstat.h  rdbstat.c
db_apps/netc_ws_plugins/etc/lwsws/: conf
db_apps/netc_ws_plugins/etc/lwsws/conf.d/: netc-plugin
db_apps/netc_ws_plugins/static/: RGraph.common.core.js  RGraph.common.dynamic.js  RGraph.common.effects.js  RGraph.gauge.js  RGraph.line.js  iperfclient.sh  iperfserver.sh  minimal.html  pktgen.sh  ss.cgi  test.html  tpho.html  xx.html
db_apps/ookla_manager/: .clang-format  CMakeLists.txt  Calculation.h  Calculation_bellca.cpp  Calculation_default.cpp  Event.h  Main.cpp  Makefile  OoklaOutputType.cpp  OoklaOutputType.h  SpeedTest.cpp  SpeedTest.h  SpeedTestTypes.cpp  SpeedTestTypes.h
db_apps/rdb_qcmap_bridge/package/: Makefile.in  aclocal.m4  configure  configure.ac
db_apps/rdb_qcmap_bridge/package/src/: Makefile.am  Makefile.in  main.cpp  qmiclient.cpp  qmiclient.hpp  qmistrres.cpp  qmistrres.hpp  qmistruct.hpp  qmitraits.cpp  qmitraits.hpp  rdbqcmapbridge.cpp  rdbqcmapbridge.hpp  serialization.cpp  serialization.hpp  setoperation.cpp  setoperation.hpp
db_apps/tr069_client/gsoap/soapcpp2/samples/factory/: Makefile.am  Makefile.in
db_apps/tr069_client/gsoap/soapcpp2/samples/googleapi/: Makefile.am  Makefile.in
db_apps/tr069_client/gsoap/soapcpp2/samples/listing/: Makefile.am  Makefile.in  listing.cpp
db_apps/tr069_client/gsoap/soapcpp2/samples/localtime/: Makefile.am  Makefile.in
db_apps/tr069_client/gsoap/soapcpp2/samples/lu/: Makefile.am  Makefile.in
db_apps/tr069_client/gsoap/soapcpp2/samples/magic/: Makefile.am  Makefile.in  magic.cpp
db_apps/tr069_client/gsoap/soapcpp2/samples/mtom/: Makefile.am  Makefile.in  mtom-test.c  mtom-test.h
db_apps/tr069_client/gsoap/soapcpp2/samples/quote/: Makefile.am  Makefile.in  quote.h
db_apps/tr069_client/gsoap/soapcpp2/samples/quote2/: Makefile.am  Makefile.in
db_apps/tr069_client/gsoap/soapcpp2/samples/quote3/: Makefile.am  Makefile.in
db_apps/tr069_client/gsoap/soapcpp2/samples/quote4/: Makefile.am  Makefile.in  quote4.cpp
db_apps/tr069_client/gsoap/soapcpp2/samples/quotex/: Makefile.am  Makefile.in
db_apps/tr069_client/gsoap/soapcpp2/samples/rss/: Makefile.am  Makefile.in  rss.c  rss.h  rsstest.html
db_apps/tr069_client/gsoap/soapcpp2/samples/udp/: Makefile.am  Makefile.in  README.txt  udp.h  udpclient.c  udpserver.c
db_apps/tr069_client/gsoap/soapcpp2/samples/xml-rpc/: Makefile.am  Makefile.in  xml-rpc-currentTime.c  xml-rpc-io.cpp  xml-rpc-io.h  xml-rpc-iters.h  xml-rpc-weblogs.c  xml-rpc-weblogs.cpp  xml-rpc.cpp  xml-rpc.h
db_apps/tr069_client/gsoap/soapcpp2/wsdl/: Makefile.am  Makefile.in  README.txt  imports.h  includes.h  mime.cpp  schema.cpp  schema.h  service.cpp  service.h  soap.cpp  types.cpp  types.h  wsdl.cpp  wsdl.h  wsdl2h.cpp
(+4596 files in other folders)
